# linalg

./: .gitignore  README.md  pyproject.toml
linalg/column/: search.py
linalg/column/tests/: test_search.py
linalg/matrix/: echelon.py  elimination.py  matrix.py  properties.py  search.py
linalg/matrix/tests/: test_echelon.py  test_elimination.py  test_matrix.py  test_search.py
linalg/reduction/: dimension.py
linalg/reduction/tests/: test_dimension.py
linalg/row/: reduction.py  search.py
linalg/row/tests/: test_reduction.py
linalg/solver/: gaussian_elimination.py
linalg/solver/tests/: test_gaussian_elimination.py
