[tool.poetry]
name = "linalg"
version = "0.1.0"
description = "A collection of linear algebra libraries"
authors = ["Kean H Lau <khklau@users.noreply.github.com>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
