[tool.poetry]
name = "linalg"
version = "0.1.0"
description = "A collection of linear algebra libraries"
authors = ["Kean H Lau <khklau@users.noreply.github.com>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~2.2.1"
scipy = "~1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "~8.3.4"
flake8 = "~7.1.1"
isort = "~5.13.2"
mypy = "~1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
